[tool.poetry]
name = "chatter"
version = "0.1.0"
description = "AI assistant to talk with."
authors = ["Leon Bezuidenhout <hello@lionbee.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.9.1"
mdtex2html = "^1.3.0"
torch = "^2.5.1"
transformers = "^4.47.1"
tiktoken = "^0.8.0"
accelerate = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
